# TaskNest

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/: .dockerignore  .env.example  Dockerfile  auth.py  database.py  main.py  railway.toml  requirements.txt
backend/agents/: graph.py
backend/chroma_data/: chroma.sqlite3
backend/rag/: chroma_store.py
backend/routers/: chat.py  document.py  folders.py  history.py  notes.py  resources.py  tasks.py
backend/uploads/16/: ilovepdf_merged-3.docx
backend/uploads/7/: TaskNest_Project_Report_.docx
frontend/: .dockerignore  .env.example  Dockerfile  README.md  index.html  main.py  nginx.conf  package-lock.json  package.json  pyproject.toml  vercel.json
frontend/src/: App.css  App.jsx  api.js  auth.css  auth.jsx  edit_profile.css  edit_profile.jsx  loading.css  profile.css  profile.jsx  project_folder.css  project_folder.jsx
tasknest-backend/: auth.py  database.py  main.py  newrelic.ini
tasknest-backend/agents/: graph.py
tasknest-backend/chroma_data/: chroma.sqlite3
tasknest-backend/rag/: chroma_store.py  indexer.py
tasknest-backend/routers/: auth_router.py  chat.py  history.py  resources.py
tasknest-backend/uploads/7/: SAILP_Project_Documentation.docx
tasknest-frontend/: README.md  package-lock.json
tasknest-frontend/src/: App.css  App.jsx  api.js  loading.css  modal-additions.css  profile.css  profile.jsx  project_folder.css  project_folder.jsx
tasknest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
