[project]
name = "ResHub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"

dependencies = [
    "cachetools>=5.3.0",
    "chromadb==1.0.21",
    "fastapi==0.115.9",
    "langchain==0.3.25",
    "langchain-community==0.3.24",
    "langchain-groq==0.3.2",
    "langgraph==0.2.76",
    "langsmith==0.2.3",
    "newrelic>=13.0.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic[email]>=2.13.4",
    "pymysql==1.1.1",
    "pypdf==4.2.0",
    "python-docx==1.1.2",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.5.0",
    "python-magic==0.4.27",
    "python-multipart==0.0.20",
    "reportlab>=4.5.1",
    "sentence-transformers==3.0.1",
    "sqlalchemy==2.0.30",
    "uvicorn==0.34.3",
    "reportlab==4.1.0",
]
