[project]
name = "tasknest-complete"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt==4.1.3",
    "chromadb==0.5.3",
    "fastapi==0.111.0",
    "langchain==0.2.6",
    "langchain-community==0.2.6",
    "langchain-groq==0.1.6",
    "langgraph==0.1.19",
    "passlib[bcrypt]==1.7.4",
    "pymysql==1.1.1",
    "pypdf==4.2.0",
    "python-docx==1.1.2",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "sentence-transformers==3.0.1",
    "sqlalchemy==2.0.30",
    "uvicorn==0.30.1",
]
